1998-07-30  Mark Crichton  <crichton@expert.cc.purdue.edu>

	* gnome-popupmenu.c (gnome_app_create_popup_menus_custom):
	The old reparent there was a bad thing.  Changed to a
	container_add.  Mem leak still exists,will be fixed soon.
	(gnome_app_create_popup_menus): Changed #if to #ifdef so
	code would actually compile correctly.

	Popup menu code is now "stable" for general testing now.  If
	anyone can fix thebad display-ish bug I'm having, I'd appreciate
	leads.

1998-07-30  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-init.c: Fixup includes.

	* gnome-canvas.c (gnome_canvas_scroll_to): Re-added the
	gnome_canvas_scroll_to() function.  It changes the scroll offset
	by emitting the proper signals, and takes care of all the gritty
	details.
	(gnome_canvas_get_scroll_offsets): New public function to query
	the scroll offsets of the canvas.

1998-07-30  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	OK, some semi-major changes.  The canvas is now a descendant of
	GtkLayout, which does smooth scrolling a la Mozilla (so that
	subwindows of the window you are scrolling do not trail behind
	when you scroll).

	There are some problems left with setting the adjustments to
	reasonable values when the canvas is zoomed in; I will be fixing
	that shortly.

	Please read the changes below to see what needs to be done for
	stuff derived from the canvas.

	* gtklayout.[ch]: Added the supercool GtkLayout container to the
	source tree.

	* gtklayout.c (gtk_layout_adjustment_changed): Do not do any
	window-related operations if the widget is not mapped.

	* Makefile.am: Added gtklayout.[ch] to the sources.

	* libgnomeui.h: Added gtklayout.h to the list of headers.

	* gnome-canvas.[ch]: The GnomeCanvas widget now descends from
	GtkLayout.  Made the necessary changes to the Gtk-related
	functions to make this happen.

	* gnome-canvas.h (struct _GnomeCanvas): Removed the bg_pixel and
	bg_set fields.  Also, removed the display_x1 and display_y1 fields